--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<div id="project" class="page-width">
+<div id="work" class="page-width">
 
   {{ with .Params.video }}
   {{ $id := replaceRE "https?://([a-z\\./]+)" "" . }}
