--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,3 +1,7 @@
 <footer>
-© Star Holden 2020
+    <a href = "mailto: studio@starholden.co.uk">studio@starholden.co.uk</a>
+    &nbsp;| 07530480910 |&nbsp;
+   <a href="https://www.instagram.com/studiostarholden/" target="_blank">@starholdenstudio</a> 
+   &nbsp;|&nbsp;
+   <a href="https://www.google.co.uk/maps/place/BizSpace+Camberwell+Lilford+Road/@51.4704424,-0.1022303,31m/data=!3m1!1e3!4m13!1m7!3m6!1s0x4876047d2caebad5:0xfa304df0f4869173!2sLilford+Rd,+London+SE5+9HY!3b1!8m2!3d51.4707063!4d-0.1052438!3m4!1s0x4876047d23f06899:0xf3d42f237f93f2bd!8m2!3d51.4704668!4d-0.1023705" target="_blank">UNIT GF3 61 Lilford Road London SE5 9HY</a>
 </footer>
