--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -14,7 +14,7 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   font-size: 20px;
-  font-family: "Archivo Narrow", sans-serif;
+  font-family: 'Rajdhani', sans-serif;
   font-weight: 300;
 }
 
@@ -29,13 +29,14 @@ body {
 }
 
 $grid-padding: 5px;
-$vert-margin: 30px;
-$page-width: 720px;
+$vert-margin: 15px;
+$page-width: 1000px;
 
 #container {
   width: 100%;
-  max-width: 880px;
-  margin: 0 auto;
+  max-width: 1000px;
+  margin: 0 auto
+
 }
 
 .page-width {
@@ -44,7 +45,7 @@ $page-width: 720px;
 }
 
 #container > header {
-  $hpad: 20px;
+  $hpad: 5px;
   margin-top: $vert-margin;
   padding: 0 $hpad;
   display: flex;
@@ -60,7 +61,9 @@ $page-width: 720px;
 
   nav {
 	flex-grow: 1;
-	text-align: right;
+  text-align: right;
+  font-size: 18px;
+  font-weight: 400;
 	a {
 	  margin-left: 1rem;
 	}
@@ -76,11 +79,13 @@ body > footer {
   justify-content: center;
   align-items: center;
   margin: 20px 0;
+  font-size: 18px;
+  font-weight: 400;
   flex: 1;
-  color: #888;
+  color: #555;
 }
 
-#project {
+#work {
   margin-top: $vert-margin;
   padding: 0 $grid-padding;
   header {
@@ -89,7 +94,7 @@ body > footer {
 	}
 	p {
 	  font-size: 0.95rem;
-	  color: #777;
+	  color: #333;
 	}
   } // end header
 
@@ -113,7 +118,7 @@ body > footer {
   }
 }
 
-div.projects {
+div.work {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -126,7 +131,7 @@ div.projects {
 
 }
 
-article.project {
+article.work {
   margin: 3em;
 
   @media #{$phone} {
@@ -145,7 +150,12 @@ article.project {
 	flex-flow: wrap;
 	justify-content: center;
 	img {
-	  padding: 0.25em;
+    padding: 0.25em;
+    opacity: 1; //start
+    transition: opacity 0.7s;
+    &:hover {
+		  opacity: 0.3; 
+		}
 	}
   }
 
@@ -164,14 +174,15 @@ article.project {
 	h2 {
 	  font-size: 1rem;
       margin: 0px;
-      font-weight: 300;
-	  color: #555;
+      font-weight: 400;
+	  color: #333;
 	}
 
 	span.date {
-	  color: #888;
-	  text-align: right;
-	  font-size: 0.75rem;
+	  color: #333;
+    text-align: right;
+    font-weight: 400;
+	  font-size: 1rem;
 	  flex-grow: 1;
 	}
   }
@@ -205,7 +216,7 @@ ul {
   }
 }
 
-#page, #about-page {
+#page, #bio-page {
   margin-top: 50px;
   h1 {
 	margin: 1rem 0;
@@ -218,13 +229,16 @@ ul {
   }
 }
 
-#about-page {
+#bio-page {
   display: flex;
+  font-size: 14px;
+  font-weight: 400;
 
-  div.about {
+  div.bio {
 	flex: 1;
   }
   div.image {
+  margin-left: 10px;
 	width: 40%;
 	img {
 	  width: 100%;
