--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 
-{{ $projects := where site.RegularPages "Params.layout" "!=" "about" }}
-{{ partial "projects.html" $projects }}
+{{ $work := where site.RegularPages "Params.layout" "!=" "about" }}
+{{ partial "work.html" $work }}
 
 {{ end }}
