--- a/layouts/partials/work.html
+++ b/layouts/partials/work.html
@@ -16,9 +16,9 @@
 			</div>
 			<footer>
 				<div>
-					<h2>{{ .Title }}</h2>
+					<h1>{{ .Title }}</h1>
 				</div>
-				<span class="date">{{ dateFormat "2006" .Params.date }}</span>
+				<span class="date"><h1>{{ dateFormat "2006" .Params.date }}</h1></span>
 			</footer>
 		</a>
 	</article>
