--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -6,12 +6,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="referrer" content="no-referrer-when-downgrade">
 
-	<title>{{ if .Title }}{{ .Title }} - {{ end }}{{ .Site.Title }}</title>
+	<title>{{ if not .IsHome }}{{ if .Title }}{{ .Title }} - {{ end }}{{ end }}{{ .Site.Title }}</title>
 	<meta name="description" content="{{ .Site.Params.Description }}">
 
 	<link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400&display=swap" rel="stylesheet"> 
 	{{ $styles := resources.Get "scss/main.scss" | toCSS | minify | fingerprint }}
-	<link rel="stylesheet" href="{{ $styles.Permalink }}" integrity="{{ $styles.Data.Integrity }}" media="screen">
+	<link rel="stylesheet" href="{{ $styles.RelPermalink }}" integrity="{{ $styles.Data.Integrity }}" media="screen">
 
 </head>
 <body>
